# resume-parser

./: .env  Dockerfile  LICENSE  README.md  pyproject.toml  start.sh
.ipynb_checkpoints/: docs-checkpoint.md  pyproject-checkpoint.toml  requirements-checkpoint.txt
app/.ipynb_checkpoints/: main-checkpoint.py
app/api/: routes.py
app/core/: config.py
app/models/: resume.py
app/services/.ipynb_checkpoints/: parser-checkpoint.py
app/utils/.ipynb_checkpoints/: pdf-checkpoint.py
archieve/: final_code.ipynb  unit_test.ipynb
archieve/.ipynb_checkpoints/: final_code-checkpoint.ipynb  unit_test-Copy1-checkpoint.ipynb
streamlit_ui/: ui.py
