[project]
name = "resume-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.26",
    "fastapi>=0.128.0",
    "instructor>=1.14.3",
    "ipykernel>=7.1.0",
    "pdfplumber>=0.11.9",
    "pyarrow<13",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
